[package]
name = "statsd"
version = "0.4.1"
description = "A basic statsd client for rust."
homepage = "https://github.com/markstory/rust-statsd"
readme = "README.md"
license = "MIT"
authors = ["Mark Story <mark@mark-story.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.md",
]

[dependencies]
rand = "^0.3.0"
